2009-11-29  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/editor.c: Use the correct size for the icons in the
	context menu.

2009-11-04  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Work version is 0.12.4

2009-11-04  Roland Clobus <rclobus@bigfoot.com>
	* Released 0.12.3

2009-11-04  Roland Clobus <rclobus@bigfoot.com>
	* docs/README.release: Mention the .in files
	* client/ai/lobbybot.c: Mention 0.12.3
	* NEWS: Release notes for 0.12.3

2009-10-25  Roland Clobus <rclobus@bigfoot.com>
	* xmldocs.make, omf.make: Synchronized with gnome-common, to remove
	warnings.
	* pioneers.nsi.in: Theme pixmaps have moved.

2009-10-15  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/interface.c: No beep after the robber has moved.
	* client/gtk/gui.c: Fix double keyboard shortcut in Game menu.
	* common/gtk/theme.c, client/gtk/data/themes/Iceland/theme.cfg,
	client/gtk/data/themes/FreeCIV-like/theme.cfg,
	client/gtk/data/themes/Makefile.am: Remove special handling of old
	default theme.
	* client/gtk/data/themes/*.png: Removed, because not used anymore.

2009-09-30  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.h: Add extra debug information.

2009-09-26  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/theme.c: Only add the default theme when no other theme
	has been added.
	* client/gtk/data/themes/FreeCIV-like/Makefile.am,
	client/gtk/data/themes/FreeCIV-like/gold.png,
	client/gtk/data/themes/Iceland.am,
	client/gtk/data/themes/Iceland/board.png,
	client/gtk/data/themes/Iceland/sea.png: Add and mention the images
	that are shared from the (old) default theme.
	* client/gtk/data/themes/Makefile.am: Mention the Classic theme.
	* client/gtk/data/themes/Classic/*: Added the Classic theme (the
	images are from client/gtk/data/themes) 

2009-09-22  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/game-resources.c, editor/gtk/game-devcards.c,
	editor/gtk/game-buildings.c, common/gtk/game-settings.c,