@@ -40,12 +40,6 @@ typedef struct {
 	gint old_highlight;
 } HighlightInfo;
 
-enum MapElementType {
-	MAP_EDGE,
-	MAP_NODE,
-	MAP_HEX
-};
-
 /* Local function prototypes */
 static void calc_edge_poly(const GuiMap * gmap, const Edge * edge,
 			   const Polygon * shape, Polygon * poly);
@@ -1264,7 +1258,7 @@ static void build_node_regions(GuiMap * gmap)
 	}
 }
 
-static void find_node(GuiMap * gmap, gint x, gint y, MapElement * element)
+Node *guimap_find_node(GuiMap * gmap, gint x, gint y)
 {
 	gint y_hex;
 	gint x_hex;
@@ -1272,22 +1266,26 @@ static void find_node(GuiMap * gmap, gint x, gint y, MapElement * element)
 	build_node_regions(gmap);
 	for (x_hex = 0; x_hex < gmap->map->x_size; x_hex++)
 		for (y_hex = 0; y_hex < gmap->map->y_size; y_hex++) {
-			const Hex *hex;
-			const Node *node;
+			Hex *hex;
+			Node *node;
 
 			hex = gmap->map->grid[y_hex][x_hex];
 			if (hex != NULL) {
 				node = find_hex_node(gmap, hex, x, y);
 				if (node != NULL) {
-					element->node = node;
-					return;
+					return node;
 				}
 			}
 		}
-	element->pointer = NULL;
+	return NULL;
 }
 
-static Hex *find_hex_internal(GuiMap * gmap, gint x, gint y)
+static void find_node(GuiMap * gmap, gint x, gint y, MapElement * element)
+{
+	element->node = guimap_find_node(gmap, x, y);
+}
+
+Hex *guimap_find_hex(GuiMap * gmap, gint x, gint y)
 {
 	gint y_hex;
 	gint x_hex;
@@ -1315,7 +1313,7 @@ static Hex *find_hex_internal(GuiMap * gmap, gint x, gint y)
 
 static void find_hex(GuiMap * gmap, gint x, gint y, MapElement * element)
 {
-	element->hex = find_hex_internal(gmap, x, y);
+	element->hex = guimap_find_hex(gmap, x, y);
 }
 
 void guimap_draw_edge(GuiMap * gmap, const Edge * edge)
@@ -1640,11 +1638,6 @@ void guimap_draw_hex(GuiMap * gmap, const Hex * hex)
 	gdk_window_invalidate_rect(gmap->area->window, &rect, FALSE);
 }
 
-Hex *guimap_find_hex(GuiMap * gmap, gint x, gint y)
-{
-	return find_hex_internal(gmap, x, y);
-}
-
 typedef struct {
 	void (*find) (GuiMap * gmap, gint x, gint y, MapElement * element);
 	void (*erase_cursor) (GuiMap * gmap);
@@ -1678,9 +1671,9 @@ CancelFunc shipMoveC;
  *  @param cursor_y Y position of the cursor
  *  @return The square of the distance
  */
-static gint distance_cursor(const GuiMap * gmap,
+gint guimap_distance_cursor(const GuiMap * gmap,
 			    const MapElement * element,
-			    enum MapElementType type, gint cursor_x,
+			    MapElementType type, gint cursor_x,
 			    gint cursor_y)
 {
 	static GdkPoint single_point = { 0, 0 };
@@ -1754,11 +1747,11 @@ void guimap_cursor_move(GuiMap * gmap, gint x, gint y,
 				hex1.hex = element->edge->hexes[0];
 				hex2.hex = element->edge->hexes[1];
 				distance1 =
-				    distance_cursor(gmap, &hex1, MAP_HEX,
-						    x, y);
+				    guimap_distance_cursor(gmap, &hex1,
+							   MAP_HEX, x, y);
 				distance2 =
-				    distance_cursor(gmap, &hex2, MAP_HEX,
-						    x, y);
+				    guimap_distance_cursor(gmap, &hex2,
+							   MAP_HEX, x, y);
 				if (distance1 == distance2)
 					can_build_ship = FALSE;
 				else {
@@ -1785,13 +1778,15 @@ void guimap_cursor_move(GuiMap * gmap, gint x, gint y,
 				node1.node = element->edge->nodes[0];
 				node2.node = element->edge->nodes[1];
 				distanceNode =
-				    MIN(distance_cursor
+				    MIN(guimap_distance_cursor
 					(gmap, &node1, MAP_NODE, x, y),
-					distance_cursor(gmap, &node2,
-							MAP_NODE, x, y));
+					guimap_distance_cursor(gmap,
+							       &node2,
+							       MAP_NODE, x,
+							       y));
 				distanceEdge =
-				    distance_cursor(gmap, element,
-						    MAP_EDGE, x, y);
+				    guimap_distance_cursor(gmap, element,
+							   MAP_EDGE, x, y);
 				if (distanceNode < distanceEdge)
 					can_build_ship = FALSE;
 				else
@@ -1802,8 +1797,8 @@ void guimap_cursor_move(GuiMap * gmap, gint x, gint y,
 			    || can_build_bridge || can_move_ship;
 			if (can_build_edge)
 				distance_edge =
-				    distance_cursor(gmap, element,
-						    MAP_EDGE, x, y);
+				    guimap_distance_cursor(gmap, element,
+							   MAP_EDGE, x, y);
 		}
 
 		find_node(gmap, x, y, element);
@@ -1826,8 +1821,8 @@ void guimap_cursor_move(GuiMap * gmap, gint x, gint y,
 			    || can_build_city || can_build_city_wall;
 			if (can_build_node)
 				distance_node =
-				    distance_cursor(gmap, element,
-						    MAP_NODE, x, y);
+				    guimap_distance_cursor(gmap, element,
+							   MAP_NODE, x, y);
 		}
 
 		/* When both edge and node can be built,
