@@ -1,6 +1,8 @@
 2009-11-29  Roland Clobus <rclobus@bigfoot.com>
 	* editor/gtk/editor.c: Use the correct size for the icons in the
 	context menu.
+	* editor/gtk/editor.c, common/gtk/guimap.c, common/gtk/guimap.h:
+	The editor can set/unset nosetup nodes.
 
 2009-11-04  Roland Clobus <rclobus@bigfoot.com>
 	* configure.ac: Work version is 0.12.4
